# PythonValidationProject

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  data.py  policy.py  psudovalidator.py
TestFiles/: dirtyword_check.py  failall.py  passall.py  secrets.txt
Validator/: validatorplaceholder.py
handler/: CMakeLists.txt  ValidationEngineExe  build.sh  config-example-1.yml  config-example.yml  config.cpp  config.h  config.yml  handler.cpp  handler.h  inproxy.cpp  inproxy.h  main.cpp  metadata.h  outproxy.cpp  outproxy.h  proxy.cpp  proxy.h  runner.cpp  runner.h  test.yaml  utils.h
handler/sample-policies/: dirtyword_check.py  no-secrets.txt  test_size.txt
handler/src/: config.cpp  config.h  config.test.cpp  inproxy.cpp  inproxy.h  main.cpp  manager.cpp  manager.h  manager.test.cpp  metadata.h  outproxy.cpp  outproxy.h  runner.cpp  runner.h  test-config.cpp  test.cpp  test.yaml  utils.h
tester2/: hello2.py  hello2_1.txt  msc2.py
validator/: Cleanup.py  DataProcessor.py  DockerGuide.txt  Dockerfile  InputFileReader.py  InputHandler.py  Logger.py  OutputHandler.py  Requirements.txt  Runner.py  SharedMemoryHandler.py  SharedMemoryReader.py
validator/src/: Cleanup.py  DataProcessor.py  InputFileReader.py  InputHandler.py  Logger.py  OutputHandler.py  Runner.py  SharedMemoryHandler.py  SharedMemoryReader.py  ValidationPolicyReader.py  log_config.py  validator.py
